# Sunangel

./: .gitignore  CNAME  Cargo.toml  README.md  docker-compose.yml  go.mod  go.sum  index.html
.github/workflows/: autoupdate.yml  test.yml
Diagrams/: architecture-all.graphml  architecture-horizon.graphml  horizon-flow.graphml
Dockerfiles/: api  horizon-compute  horizon-get  horizon-service  sky-service  spot-finder
api/: Cargo.toml  README.md
api/.github/workflows/: test.yml
api/src/: api.rs  lib.rs  main.rs  messaging.rs  structs.rs
assets/: index-7a6fdc0b.css  index-8f0a91f5.js
front/: README.md  bun.lockb  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
front/src/: App.vue  Search.vue  graphql.ts  index.css  main.ts  projection.ts  searching.ts  state.ts
front/src/assets/: base.css  main.css
front/src/components/: Disclaimer.vue  Map.vue  SearchInput.vue  SpotList.vue  VersionInfo.vue
front/src/components/Results/: SpotElement.vue  SpotList.vue
front/src/components/mapElements/: SearchCircle.vue  SpotPoint.vue  SpotPointStyle.vue
front/src/privacy/: Datenschutz.vue  Privacy.vue
front/src/search/: Search.vue  graphql.ts  projection.ts  searching.ts  state.ts
front/src/search/components/: Popup.vue  PrivacyPopup.vue  SearchInput.vue  VersionInfo.vue
front/src/search/components/Results/: SpotElement.vue  SpotList.vue
front/src/search/components/mapElements/: SearchCircle.vue  SpotPoint.vue
go-horizon-service/src/cmd/: horizon-service.go  main.go
go-horizon-service/src/cmd/driver/: driver.go
go-horizon-service/src/messaging/: messaging.go
horizon/: README.md
horizon-compute/: README.md  go.mod
horizon-compute/src/cmd/driver/: driver.go
horizon-compute/src/messaging/: messaging.go
horizon-compute/src/storage/: storage.go
horizon/common/: common.go
horizon/compute/: horizon-compute.go
horizon/compute/cmd/: horizon-compute.go
horizon/compute/cmd/extract_horizon/: extract_horizon.go
horizon/compute/com/: com.go
horizon/compute/messaging/: messaging.go
horizon/get/: horizon-get.go
horizon/messages/: messages.go
messages-common/: Cargo.toml  README.md
messages-common/src/: jetstream.rs  lib.rs  request_id.rs
messages-common/tests/: request_id_tests.rs
messaging/: messaging.go
scripts/: update_version.sh
sky-service/: Cargo.toml
sky-service/src/: angle.rs  horizon.rs  julian.rs  lib.rs  location.rs  main.rs  messaging.rs  sky.rs  util.rs
sky-service/src/sky/: moon.rs  sun.rs  util.rs
sky-service/tests/: range_no_candidates.rs  set_right_before.rs  set_rise.rs
spot-finder/: Cargo.toml  Dockerfile  README.md
spot-finder/src/: direction.rs  lib.rs  location.rs  main.rs  spot_finder.rs
sun-service/: Cargo.toml
sun-service/src/: angle.rs  horizon.rs  julian.rs  lib.rs  location.rs  main.rs  messaging.rs  sky.rs
sun-service/src/messaging/: nats.rs
sun-service/src/sky/: sun.rs
sun-service/src/sky/sun/: ecliptic.rs
sun-service/tests/: set_rise.rs
