[package]
name = "api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "984973658217f73d63608283d18723e11ce65161", features = ["chrono", "chrono-tz"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", rev = "984973658217f73d63608283d18723e11ce65161" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", rev = "984973658217f73d63608283d18723e11ce65161", features = ["subscriptions"] }
# TODO: revert juniper back to official version when 0.16 released

actix-web = { version = "4.4.0", features = ["openssl"] }
actix-cors = "0.6.4"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
async-nats = "0.32.1"
futures-util = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }
messages-common = { path = "../messages-common" }
futures = "0.3.29"
log = "0.4.20"
anyhow = "1.0.75"
bytes = "1.5.0"
env_logger = "0.10.1"
async-stream = "0.3.5"
openssl = "0.10.60"

