[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: replace with released versions as soon a possible
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "ac6e60987f5c20ed2c0046fe08245215231f56b7", features = ["chrono", "chrono-tz"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", rev = "ac6e60987f5c20ed2c0046fe08245215231f56b7" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", rev = "ac6e60987f5c20ed2c0046fe08245215231f56b7", features = ["subscriptions"] }
#juniper = { version = "0.16.0", features = ["chrono"] }
#juniper_graphql_ws = "0.4.0"
#juniper_actix = { version = "0.5.0", features = ["subscriptions"] }

actix-web = { version = "4.5.1", features = ["openssl"] }
actix-cors = "0.6.5"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
async-nats = "0.32.1"
futures-util = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
messages-common = { path = "../messages-common" }
futures = "0.3.30"
log = "0.4.21"
anyhow = "1.0.80"
bytes = "1.5.0"
env_logger = "0.10.2"
async-stream = "0.3.5"
openssl = "0.10.64"

