[package]
name = "messages-common"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-nats = "0.32.1"
bytes = "1.5.0"
futures-util = "0.3.30"
log = "0.4.20"
serde_json = "1.0.111"
