[package]
name = "sky-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-nats = "0.32.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.20"
messages-common = { path = "../messages-common" }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
