[package]
name = "sky-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-nats = "0.32.1"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.5", features = ["serde"] }
env_logger = "0.10.1"
futures-util = "0.3.30"
log = "0.4.20"
messages-common = { path = "../messages-common" }
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
