[package]
name = "sky-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-nats = "0.32.1"
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
env_logger = "0.10.2"
futures-util = "0.3.30"
log = "0.4.20"
messages-common = { path = "../messages-common" }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
