[package]
name = "spot-finder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-nats = "0.29.0"
bytes = "1.4.0"
futures-util = "0.3.28"
osm-xml = "0.6.2"
reqwest = "0.11.18"
serde = "1.0.178"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
messages-common = { path = "../messages-common" }
log = "0.4.19"
env_logger = "0.10.0"
