[package]
name = "spot-finder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-nats = "0.32.0"
bytes = "1.5.0"
futures-util = "0.3.28"
osm-xml = "0.6.2"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
messages-common = { path = "../messages-common" }
log = "0.4.20"
env_logger = "0.10.0"
