[package]
name = "spot-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-nats = "0.32.1"
bytes = "1.6.0"
futures-util = "0.3.30"
osm-xml = "0.6.2"
reqwest = "0.11.27"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
messages-common = { path = "../messages-common" }
log = "0.4.21"
env_logger = "0.10.2"
