[package]
name = "sun-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.29.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
messages-common = { path = "../messages-common" }
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
